--- a/nginx.conf
+++ b/nginx.conf
@@ -55,6 +55,19 @@ server {
         add_header Content-Type text/plain;
     }
 
+    # Telegram Bot Webhook
+    location /webhook {
+        proxy_pass http://localhost:3000/webhook;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     # Deny access to hidden files
     location ~ /\. {
         deny all;
