--- a/nginx.conf
+++ b/nginx.conf
@@ -68,6 +68,16 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    # Proxy book-for-client to Node.js bot
+    location /book-for-client {
+        proxy_pass http://localhost:3000/book-for-client;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Deny access to hidden files
     location ~ /\. {
         deny all;
