--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name your-domain.com;
+    server_name liftme.by;
 
     # Redirect HTTP to HTTPS
     return 301 https://$server_name$request_uri;
@@ -10,11 +10,11 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name your-domain.com;
+    server_name liftme.by;
 
     # SSL Configuration (у вас уже есть SSL)
-    ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/liftme.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/liftme.by/privkey.pem;
     
     # SSL Settings
     ssl_protocols TLSv1.2 TLSv1.3;
