РџРѕР»РЅР°СЏ РјРёРіСЂР°С†РёСЏ СЃ Supabase РЅР° PostgreSQL Рё Р»РѕРєР°Р»СЊРЅРѕРµ С…СЂР°РЅРёР»РёС‰Рµ

--- a/env.example
+++ b/env.example
@@ -1,8 +1,22 @@
-# Supabase Configuration for Frontend
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_PUBLISHABLE_KEY=your_supabase_anon_key
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=liftme_bot
+DB_USER=liftme_user
+DB_PASSWORD=your_password
 
-# Note: Telegram Bot Token and Admin IDs are configured in Supabase Edge Functions secrets:
-# - TELEGRAM_BOT_TOKEN: 8420494776:AAHYErzNIj47-TPBQeqUl0rSFfgZCu6mY1M
-# - ADMIN_TELEGRAM_ID: 783321437 (или 6933111964)
+# Storage Configuration
+STORAGE_DIR=/var/www/liftme-bot/server/storage
+PUBLIC_URL=https://liftme.by
+
+# Telegram Bot Configuration
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+ADMIN_TELEGRAM_IDS=783321437,6933111964
+
+# API Configuration for Frontend
+VITE_API_URL=https://liftme.by/api
+
+# Server Configuration
+PORT=3000
+PROJECT_URL=https://liftme.by
 
