--- a/nginx.conf
+++ b/nginx.conf
@@ -78,6 +78,33 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Proxy cancel-booking-admin to Node.js bot
+    location /cancel-booking-admin {
+        proxy_pass http://localhost:3000/cancel-booking-admin;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Proxy API endpoints to Node.js bot
+    location /api/ {
+        proxy_pass http://localhost:3000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Serve storage files
+    location /storage/ {
+        alias /var/www/liftme-bot/server/storage/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
+
     # Deny access to hidden files
     location ~ /\. {
         deny all;
