--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,9 @@
     "dev": "nodemon bot.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.89.0",
     "express": "^4.18.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
