Fix nginx config: move /api/ location before / location

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,11 +43,6 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Main location - serve SPA
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
     # Health check endpoint (optional)
     location /health {
         access_log off;
@@ -66,6 +61,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+    }
+
+    # Proxy API endpoints to Node.js bot (MUST be before location /)
+    location /api/ {
+        proxy_pass http://localhost:3000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Proxy book-for-client to Node.js bot
@@ -88,21 +93,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy API endpoints to Node.js bot
-    location /api/ {
-        proxy_pass http://localhost:3000/api/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
     # Serve storage files
     location /storage/ {
         alias /var/www/liftme-bot/server/storage/;
         expires 30d;
         add_header Cache-Control "public, immutable";
+    }
+
+    # Main location - serve SPA (MUST be last)
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
     # Deny access to hidden files
