Fix: move /storage/ location before regex to prevent conflicts

--- a/nginx.conf
+++ b/nginx.conf
@@ -37,8 +37,15 @@ server {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
-    # Cache static assets
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+    # Serve storage files (MUST be before regex locations)
+    location /storage/ {
+        alias /var/www/liftme-bot/server/storage/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Cache static assets (exclude /storage/)
+    location ~* ^(?!/storage/).*\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
