Add nginx location for create-regular-bookings endpoint

--- a/nginx-admin3.conf
+++ b/nginx-admin3.conf
@@ -100,6 +100,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Proxy create-regular-bookings to Node.js bot
+    location /create-regular-bookings {
+        proxy_pass http://localhost:3002/create-regular-bookings;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Main location - serve SPA (MUST be last)
     location / {
         try_files $uri $uri/ /index.html;
