Change create-regular-bookings location to use prefix match instead of exact

--- a/nginx.conf
+++ b/nginx.conf
@@ -101,7 +101,7 @@ server {
     }
 
     # Proxy create-regular-bookings to Node.js bot
-    location = /create-regular-bookings {
+    location ^~ /create-regular-bookings {
         proxy_pass http://localhost:3000/create-regular-bookings;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
