Add 'About Me' feature: admin panel settings and bot button to display info

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,6 +43,13 @@ server {
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
+    
+    # Serve about-me photo
+    location /storage/about-me/ {
+        alias /var/www/liftme-bot/server/storage/about-me/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
 
     # Cache static assets (exclude /storage/)
     location ~* ^(?!/storage/).*\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
