Add nginx location for about-me endpoint

--- a/nginx.conf
+++ b/nginx.conf
@@ -119,6 +119,19 @@ server {
         proxy_pass_request_headers on;
     }
 
+    # Proxy about-me to Node.js bot
+    location ^~ /about-me {
+        proxy_pass http://localhost:3000/about-me;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass_request_body on;
+        proxy_pass_request_headers on;
+        client_max_body_size 10M;
+    }
+
     # Main location - serve SPA (MUST be last)
     location / {
         try_files $uri $uri/ /index.html;
