--- a/nginx-admin3.conf
+++ b/nginx-admin3.conf
@@ -43,6 +43,13 @@ server {
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
+    
+    # Serve about-me photo
+    location /storage/about-me/ {
+        alias /var/www/admin3-liftme-bot/server/storage/about-me/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
 
     # Cache static assets (exclude /storage/)
     location ~* ^(?!/storage/).*\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
@@ -108,6 +115,19 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Proxy about-me to Node.js bot
+    location ^~ /about-me {
+        proxy_pass http://localhost:3002/about-me;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass_request_body on;
+        proxy_pass_request_headers on;
+        client_max_body_size 10M;
     }
 
     # Main location - serve SPA (MUST be last)
