Fix admin2 nginx: use exact match for create-regular-bookings and about-me, add storage/about-me location

--- a/nginx-admin2.conf
+++ b/nginx-admin2.conf
@@ -108,7 +108,7 @@ server {
     }
 
     # Proxy create-regular-bookings to Node.js bot
-    location ^~ /create-regular-bookings {
+    location = /create-regular-bookings {
         proxy_pass http://localhost:3001/create-regular-bookings;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -120,7 +120,7 @@ server {
     }
 
     # Proxy about-me to Node.js bot
-    location ^~ /about-me {
+    location = /about-me {
         proxy_pass http://localhost:3001/about-me;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
