Change browser tab title to nuestros robots

--- a/nginx-admin2.conf
+++ b/nginx-admin2.conf
@@ -44,11 +44,12 @@ server {
         add_header Cache-Control "public, immutable";
     }
     
-    # Serve about-me photo
+    # Serve about-me photo (no caching to avoid stale images)
     location /storage/about-me/ {
         alias /var/www/admin2-liftme-bot/server/storage/about-me/;
-        expires 30d;
-        add_header Cache-Control "public, immutable";
+        expires -1;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
     }
 
     # Cache static assets (exclude /storage/)
